--- a/sect/appointments.tex
+++ b/sect/appointments.tex
@@ -1,17 +1,15 @@
-\section*{APPOINTMENTS}
+\section{APPOINTMENTS}
 
 \lineitem[2024\ongoing]{Trinity University}
-\subline{Assistant Professor of Earth \& Environmental Geosciences}
+\subline{Assistant Professor}
+Earth \& Environmental Geosciences
 
-\vskip2ex
+Museum Studies
 
 \lineitem[2021 -- 2024]{Dartmouth College}
 
-\subline{NSF Astronomy \&\ Astrophysics Postdoctoral Fellow}
-
-``Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond"
-
-~~~Advisors: Profs. C. Brenhin Keller (Earth Sciences) \&\ Elisabeth R. Newton (Physics \&\ Astronomy)
+\subline{NSF Astronomy \& Astrophysics Postdoctoral Fellow}
+Advisors: Prof.~C.~Brenhin Keller (Earth Sciences) \& Prof.~Elisabeth R.~Newton (Physics \& Astronomy)
 \subline[2023--24]{Lecturer} 
 Department of Physics \& Astronomy
 
