--- a/sect/awards.tex
+++ b/sect/awards.tex
@@ -1,4 +1,4 @@
-\section*{AWARDS \& HONORS}
+\section{AWARDS \& HONORS}
 
 \begin{tabular}{@{}p{.1\linewidth} @{}p{.9\linewidth}} 
 	2024 & A.~Lincoln~Washburn Award for Outstanding Mentoring, Dartmouth Earth Sciences\\
