--- a/sect/epilogue.tex
+++ b/sect/epilogue.tex
@@ -3,6 +3,5 @@ Wildland Firefighter (Type 2) --- U.S. Forest Service, Winthrop, WA, U.S.A. --- 
 
 Server \& Bartender --- Trio Restaurant, Fish Creek, WI, U.S.A. --- 2014.
 
-
-\lineitem{\textbf{Non-Academic Interests}}
+\lineitem{Non-Academic Interests}
  	Bicycling, cross-country skiing, birdwatching, breadmaking, classical history and literature.
