--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -1,4 +1,4 @@
-\section*{PUBLICATIONS}
+\section{PUBLICATIONS}
 \hfill* mentored student author
 \newcommand{\inprep}[1]{\textit{#1} [in prep.]}
 \newcommand{\submitted}[1]{\textit{#1} [submitted]}
@@ -11,7 +11,7 @@
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
     %\item[\dots] \ghedwards, G. Piccione, M. Gomez. Viewership patterns of a virtual geoscience outreach program. \inprep{Journal of Geoscience Education}.
-    \item[\dots] A.~Abuawad, M.~Griffiths, \ghedwards, A.~Eftekhari, M.~El-Ebweini, H.~Al-Najar, A.~Butmeh, R.~Abu~Dayyeh, M.~Al-Shewy, A.~Aker. From ecocide to genocide: a call to action for scientists globally to address the destruction in Gaza. \submitted{Environmental Health Perspectives}. Preprint:~\doi{10.2139/ssrn.5021472}
+    \item[\dots] A.~Abuawad, M.~Griffiths, \ghedwards, A.~Eftekhari, M.~El-Ebweini, H.~Al-Najar, A.~Butmeh, R.~Abu~Dayyeh, M.~Al-Shewy, A.~Aker. From ecocide to genocide: a call to action for scientists globally to address the destruction in Gaza. \inreview{Environmental Health Perspectives}. Preprint:~\doi{10.2139/ssrn.5021472}
  
     \item \ghedwards, G.G.~Piccione, T.~Blackburn,  S.~Tulaczyk. 2025. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica. \pub{Chemical Geology}{671}. \doi{10.1016/j.chemgeo.2024.122463}
         
