--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,4 +1,4 @@
-\section*{TEACHING \&\ MENTORING}
+\section{TEACHING \&\ MENTORING}
 \lineitem{Trinity University}
 \subline{Courses Taught}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
@@ -29,8 +29,14 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \end{itemize}
 
 \subline{Mentored Graduate Researchers}
-\begin{tabular}{ll}
-	2022\ongoing & Rayna Rampalli (PhD student)\\
+\begin{tabular}{ll | ll}
+	2022\ongoing & Rayna Rampalli (PhD Candidate) 
+	&
+	2021--23 & Noemi Ortega Dominguez, MSc
+	\\
+	2023\ongoing & Jannitta Yao (PhD Candidate)
+	&
+	2021--23 & Debbie Sulca, MSc
 \end{tabular}
 \subline{Mentored Undergraduate Researchers}
 \begin{tabular}{ll|ll}
