--- a/sect/education.tex
+++ b/sect/education.tex
@@ -1,10 +1,10 @@
-\section*{EDUCATION}
+\section{EDUCATION}
 
 \lineitem[2021]{\textbf{University of California Santa Cruz}}
 \subline{PhD in Earth Sciences}
 Applications of the uranium decay systems in deep time and the Quaternary: chronologic insights within planetary interiors and beneath glaciers [\href{https://escholarship.org/uc/item/0vp7r59z}{PDF}]
 
-\quad Committee: Profs. Terrence Blackburn (Chair), Slawek Tulaczyk, Myriam Telus.
+\quad Committee: Profs.~Terrence Blackburn (Chair), Slawek Tulaczyk, Myriam Telus.
 
 \lineitem[2014]{Bowdoin College \brunswick}
 \subline{Bachelor of Arts}
