--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -1,4 +1,4 @@
-\section*{OUTREACH \& PUBLIC SERVICE}
+\section{PUBLIC SERVICE \& OUTREACH}
 
 \lineitem[2022 -- 2024]{Montshire Museum of Science}
 \subline{Guest Scientist}
@@ -26,23 +26,19 @@
 \lineitem[2019 -- 2020]{Geoscientists Encouraging Openness and Diversity in the Earth Sciences\\(GEODES)}
 \subline{Graduate Student Leader}
 \begin{itemize}
-	\item A student-run group in the UCSC Earth \& Planetary Sciences Department.
-	\item One of six graduate student leaders responsible for the operation and development of GEODES.
-	\item Organized and implemented outreach events centered on promoting underrepresented groups in the geosciences and cultivating a culture of inclusivity within the department.
+	\item Student-run group in the UCSC Earth \& Planetary Sciences Department.
+	\item Organized and implemented inclusivity-centered outreach and community-building events.
 \end{itemize}
 
 \lineitem[2015 -- 2016]{Peary-MacMillan Arctic Museum \brunswick}
 \subline[2015 -- 2016]{Curatorial Intern}
 \begin{itemize}
 	\item Developed outreach programming and exhibit content.
-	\item Supplemented undergraduate courses with lectures and discussions drawing on museum collections.
+	\item Supplemented undergraduate courses with museum collections and expertise.
 	\item Mentored and trained undergraduate student interns and employees.
 \end{itemize}
 
 \subline[2012 -- 2014]{Student Tour Guide}
-\begin{itemize}
-	\item Led museum tours for all age groups of museum exhibits and interactive collections.
-\end{itemize}
 
 \lineitem[2015]{Museum of the Rockies \qquad \normalfont{Bozeman, MT, U.S.A.}}
 \textit{Security Volunteer}
