formatting touch-ups. prep for Trinity reviews

--- a/Edwards-CV.tex
+++ b/Edwards-CV.tex
@@ -52,6 +52,15 @@
 \newcommand{\subline}[2][]{\subsubsection*{\textit{#2}\qquad #1}}
 \newcommand{\brunswick}{\qquad \normalfont{Brunswick, ME, U.S.A.}}
 
+%-------------------------------------------
+%	Special Formatting for Professional Reviews
+%-------------------------------------------
+\newcommand{\TUpubpct}[1]{}
+
+%% Toggle ON/OFF
+%\renewcommand{\TUpubpct}[1]{\\\textbf{GHE contribution:}~$\sim$#1\%.}
+
+
 \begin{document}
 % NAME
 \begin{center}
