--- a/sect/academic-service.tex
+++ b/sect/academic-service.tex
@@ -11,6 +11,12 @@
 
 
 \lineitem{Academic Meetings}
+
+\subline{Lunar \& Planetary Science Conference}
+\begin{tabular}{ll} 
+	2025 & Dwornik Award Judge
+\end{tabular}
+
 \subline{American Astronomical Society}
 \begin{tabular}{ll} 
 	2023 & Chambliss Award Judge (best student poster presentation)
