--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -19,7 +19,7 @@
   
 \end{etaremune}
 
-\section*{INVITED OUTREACH \& COMMUNITY TALKS}
+\section*{INVITED OUTREACH TALKS \& COMMUNITY ENGAGEMENT}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex,]
 
