--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -2,6 +2,8 @@
 \lineitem{Trinity University}
 \subline{Courses Taught}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+	Spring 2025 & Earth Surface Processes\\
+	Spring 2025 & Earth's Environmental Systems\\
 	Fall 2024 & Global Climate Change
 \end{tabular}
 
