add accessibility tagging

--- a/sect/academic-service.tex
+++ b/sect/academic-service.tex
@@ -13,21 +13,25 @@
 \lineitem{Academic Meetings}
 
 \subline{Lunar \& Planetary Science Conference}
+\tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{ll} 
 	2025 & Dwornik Award Judge
 \end{tabular}
 
 \subline{American Astronomical Society}
+\tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{ll} 
 	2023 & Chambliss Award Judge (best student poster presentation)
 \end{tabular}
 
 \subline{Meteoritical Society Annual Meeting}
+\tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{ll} 
 	2022 & 	McKay Award Judge (best student oral presentation)
 \end{tabular}
 
 \subline{AGU Fall Meeting}
+\tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{ll} 
 	2017 & 	Co-Chair/Co-Convener: Applications of Thermochronology to Understand Crustal Systems
 \end{tabular}
