--- a/sect/awards.tex
+++ b/sect/awards.tex
@@ -1,5 +1,5 @@
 \section{AWARDS \& HONORS}
-
+\tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{@{}p{.1\linewidth} @{}p{.9\linewidth}} 
 	2024 & A.~Lincoln~Washburn Award for Outstanding Mentoring, Dartmouth Earth Sciences\\
 	2020 & UCSC Earth \& Planetary Sciences Outstanding TA Award (Honorable Mention) \\
