--- a/sect/expertise.tex
+++ b/sect/expertise.tex
@@ -1,13 +1,15 @@
 \section{Laboratory \& Research Expertise}
 
 \lineitem{Instrumentation}
-\begin{tabular}{l l}
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{ll}
 	\itshape Expert & TIMS \\
 	\itshape Proficient & MC-ICP-MS, ICP-MS, SEM-EDS \\
 	\itshape Limited & IRMS, ICP-OES, XRF, XRD
 \end{tabular}
 
 \lineitem{Programming Languages}
+\tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{ll}
 	\itshape Expert & Julia \\
 	\itshape Proficient & MATLAB, Python, R \\
