--- a/sect/media.tex
+++ b/sect/media.tex
@@ -1,5 +1,5 @@
 \section{IN POPULAR MEDIA}
-
+\tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{l l l} 
 2024 & Sky \& Telescope & \href{https://skyandtelescope.org/astronomy-news/meteorites-tighten-timeline-for-giant-planets-movement-through-the-solar-system/}{Meteorites tighten timeline for giant planets' movement\dots}
 \\
