--- a/Edwards-CV.tex
+++ b/Edwards-CV.tex
@@ -7,7 +7,7 @@
 %-------------------------------------------
 %	PACKAGES & CONFIGURATIONS
 %-------------------------------------------
-
+\DocumentMetadata{lang=en,pdfversion=2.0,pdfstandard=ua-2,pdfstandard=a-4,testphase=latest}
 \documentclass[10pt]{article}
 \usepackage[letterpaper,margin=1in]{geometry}
 
