--- a/sect/funding.tex
+++ b/sect/funding.tex
@@ -1,7 +1,5 @@
 \section{FUNDING}
-%\lineitem{Current~/~Active}
-
-%\lineitem{Prior~/~Inactive}
+\tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{@{}p{.1\linewidth} p{0.1\linewidth} p{0.35\linewidth} @{}p{.4\linewidth}} 
     %\bfseries Timeframe & \bfseries Amount & \bfseries Agency \\
     2025 & \$9\,000 & Trinity University & Summer Research Stipend\\
