--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,7 +1,11 @@
+\newcommand\teachingtable{p{.15\linewidth} p{.85\linewidth}}
+\newcommand\mentortable{ll | ll}
+
 \section{TEACHING \&\ MENTORING}
 \lineitem{Trinity University}
 \subline{Courses Taught}
-\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{\teachingtable} %p columns set fixed width and allow text wrapping
 	Spring 2025 & Earth Surface Processes\\
 	Spring 2025 & Earth's Environmental Systems\\
 	Fall 2024 & Global Climate Change
@@ -9,14 +13,16 @@
 
 \lineitem{Dartmouth College}
 \subline{Courses Taught}
-\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{\teachingtable} %p columns set fixed width and allow text wrapping
 	Spring 2024 & Exploration of the Solar System \\
 	Fall 2023 & Exploring the Universe \\
 	Fall 2023 & ``The Stretch'' (Field Camp) --- Glacial and climate history section (\emph{Co-Instructor})
 \end{tabular}
 
 \subline{Guest Lectures}
-\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{\teachingtable} %p columns set fixed width and allow text wrapping
 	Winter 2024 & Astrobiology\\
 	Spring 2022--24 & Igneous and Metamorphic Petrology
 \end{tabular}
@@ -31,7 +37,8 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \end{itemize}
 
 \subline{Mentored Graduate Researchers}
-\begin{tabular}{ll | ll}
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{\mentortable}
 	2022\ongoing & Rayna Rampalli (PhD Candidate) 
 	&
 	2021--23 & Noemi Ortega Dominguez, MSc
@@ -41,14 +48,16 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 	2021--23 & Debbie Sulca, MSc
 \end{tabular}
 \subline{Mentored Undergraduate Researchers}
-\begin{tabular}{ll|ll}
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{\mentortable}
 	2023 & Jack Duranceau (thesis 2023) & 2022 & Cameron Stewart\\
 	2023 & Chase Alvarado-Anderson (thesis 2023)\\
 \end{tabular}
 
 \lineitem{University of California Santa Cruz}
 \subline{Graduate Teaching Assistant}
-\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{\teachingtable} %p columns set fixed width and allow text wrapping
 	Spring 2021 & \textit{Measuring Earth’s 4.5 Billion-Year History} (radiogenic and stable isotope geochemistry)\\
 	Fall 2020 & \textit{Evolution of Earth} (Earth history overview) \\
 	Fall 2019 & \textit{Elements of Field Geology}\\
@@ -57,7 +66,8 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \end{tabular}
 
 \subline{Mentored Undergraduate Researchers}
-\begin{tabular}{ll|ll}
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{\mentortable}
 	2019--21 & Cosmo Varah-Sikes (thesis 2021) &
 	2018 & Frances O'Byrne\\
 	2020 & Linh Phan &
@@ -68,8 +78,9 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 
 \lineitem{Bowdoin College \brunswick}
 \subline{Laboratory Teaching Assistant}
-\begin{tabular}{ll|ll} %p columns set fixed width and allow text wrapping
-Fall 2012, 2013 & \textit{Investigating Earth}&
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{\teachingtable} %p columns set fixed width and allow text wrapping
+Fall 2012, 2013 & \textit{Investigating Earth}\\
 Fall 2013 & \textit{Marine Biogeochemistry}
 \end{tabular}
 
