add finesst, fix teaching tables

--- a/Edwards-CV.tex
+++ b/Edwards-CV.tex
@@ -7,7 +7,7 @@
 %-------------------------------------------
 %	PACKAGES & CONFIGURATIONS
 %-------------------------------------------
-\DocumentMetadata{lang=en,pdfversion=2.0,pdfstandard=ua-2,pdfstandard=a-4,testphase=latest}
+\DocumentMetadata{lang=en,pdfversion=2.0,pdfstandard=ua-2,pdfstandard=a-4,testphase=latest}\tagpdfsetup{math/mathml/luamml/load=false}
 \documentclass[10pt]{article}
 \usepackage[letterpaper,margin=1in]{geometry}
 
