--- a/sect/academic-service.tex
+++ b/sect/academic-service.tex
@@ -8,7 +8,14 @@
 	\item Write annual recommendation reports based on advisory board discussions. 
 \end{itemize}
 
+\lineitem{Peer-review referee}
+\textit{Geochronology, Geology, Nature Communications}
 
+\lineitem{Proposal referee}
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{ll} 
+	2025 & Future Investigators in NASA Earth and Space Science and Technology (FINESST)
+\end{tabular}
 
 \lineitem{Academic Meetings}
 
@@ -35,9 +42,6 @@
 \begin{tabular}{ll} 
 	2017 & 	Co-Chair/Co-Convener: Applications of Thermochronology to Understand Crustal Systems
 \end{tabular}
-
-\lineitem{Peer-review Referee}
-\textit{Geochronology}, \textit{Geology}, \textit{Nature Communications}
 
 \lineitem{Society Affiliations}
 Geochemical Society, Meteoritical Society, National Association of Geoscience Teachers, Geological Society of America, American Geophysical Union, American Astronomical Society.
