--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,28 +1,24 @@
-\newcommand\teachingtable{p{.15\linewidth} p{.85\linewidth}}
-\newcommand\mentortable{ll | ll}
-
 \section{TEACHING \&\ MENTORING}
 \lineitem{Trinity University}
 \subline{Courses Taught}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{\teachingtable} %p columns set fixed width and allow text wrapping
-	Spring 2025 & Earth Surface Processes\\
-	Spring 2025 & Earth's Environmental Systems\\
+\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+	Spring 2025 & Earth Surface Processes, Earth's Environmental Systems\\
 	Fall 2024 & Global Climate Change
 \end{tabular}
 
 \lineitem{Dartmouth College}
 \subline{Courses Taught}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{\teachingtable} %p columns set fixed width and allow text wrapping
+\begin{tabular}{p{.15\linewidth} >{\itshape}l}
 	Spring 2024 & Exploration of the Solar System \\
 	Fall 2023 & Exploring the Universe \\
-	Fall 2023 & ``The Stretch'' (Field Camp) --- Glacial and climate history section (\emph{Co-Instructor})
+	Fall 2023 & The Stretch \normalfont (Field camp ---glacial and climate history section)
 \end{tabular}
 
 \subline{Guest Lectures}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{\teachingtable} %p columns set fixed width and allow text wrapping
+\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 	Winter 2024 & Astrobiology\\
 	Spring 2022--24 & Igneous and Metamorphic Petrology
 \end{tabular}
@@ -38,7 +34,7 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 
 \subline{Mentored Graduate Researchers}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{\mentortable}
+\begin{tabular}{ll|ll}
 	2022\ongoing & Rayna Rampalli (PhD Candidate) 
 	&
 	2021--23 & Noemi Ortega Dominguez, MSc
@@ -49,7 +45,7 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \end{tabular}
 \subline{Mentored Undergraduate Researchers}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{\mentortable}
+\begin{tabular}{ll | ll}
 	2023 & Jack Duranceau (thesis 2023) & 2022 & Cameron Stewart\\
 	2023 & Chase Alvarado-Anderson (thesis 2023)\\
 \end{tabular}
@@ -57,17 +53,17 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \lineitem{University of California Santa Cruz}
 \subline{Graduate Teaching Assistant}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{\teachingtable} %p columns set fixed width and allow text wrapping
-	Spring 2021 & \textit{Measuring Earth’s 4.5 Billion-Year History} (radiogenic and stable isotope geochemistry)\\
-	Fall 2020 & \textit{Evolution of Earth} (Earth history overview) \\
-	Fall 2019 & \textit{Elements of Field Geology}\\
-	Spring 2018 & \textit{Geochemistry of the Solar System}\\
-	Winter 2018 & \textit{Geologic Principles} (introductory Earth science)
+\begin{tabular}{p{.15\linewidth} >{\itshape}l}
+	Spring 2021 & Measuring Earth’s 4.5 Billion-Year History \normalfont(radiogenic and stable isotope geochemistry)\\
+	Fall 2020 & Evolution of Earth\\
+	Fall 2019 & Elements of Field Geology\\
+	Spring 2018 & Geochemistry of the Solar System\\
+	Winter 2018 & Geologic Principles
 \end{tabular}
 
 \subline{Mentored Undergraduate Researchers}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{\mentortable}
+\begin{tabular}{ll | ll}
 	2019--21 & Cosmo Varah-Sikes (thesis 2021) &
 	2018 & Frances O'Byrne\\
 	2020 & Linh Phan &
@@ -79,7 +75,7 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \lineitem{Bowdoin College \brunswick}
 \subline{Laboratory Teaching Assistant}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{\teachingtable} %p columns set fixed width and allow text wrapping
+\begin{tabular}{p{.15\linewidth} l} %p columns set fixed width and allow text wrapping
 Fall 2012, 2013 & \textit{Investigating Earth}\\
 Fall 2013 & \textit{Marine Biogeochemistry}
 \end{tabular}
