--- a/sect/education.tex
+++ b/sect/education.tex
@@ -7,5 +7,5 @@ Applications of the uranium decay systems in deep time and the Quaternary: chron
 \quad Committee: Profs.~Terrence Blackburn (Chair), Slawek Tulaczyk, Myriam Telus.
 
 \lineitem[2014]{Bowdoin College \brunswick}
-\subline{Bachelor of Arts}
-Earth and Oceanographic Science with Honors, minor in Classics (\emph{Summa cum Laude}, $\Phi$BK Society)
+\subline{Bachelor of Arts, Summa cum Laude}
+Earth and Oceanographic Science with Honors, minor in Classics ($\Phi$BK Society)
