--- a/sect/appointments.tex
+++ b/sect/appointments.tex
@@ -2,13 +2,11 @@
 
 \lineitem[2024\ongoing]{Trinity University}
 \subline{Assistant Professor}
-Earth \& Environmental Geosciences
-
-Museum Studies
+Earth \& Environmental Geosciences, Museum Studies
 
 \lineitem[2021 -- 2024]{Dartmouth College}
 
-\subline{NSF Astronomy \& Astrophysics Postdoctoral Fellow}
+\subline[2021--24]{NSF Astronomy \& Astrophysics Postdoctoral Fellow}
 Advisors: Prof.~C.~Brenhin Keller (Earth Sciences) \& Prof.~Elisabeth R.~Newton (Physics \& Astronomy)
 \subline[2023--24]{Lecturer} 
 Department of Physics \& Astronomy
