--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -12,7 +12,7 @@
 \lineitem{Refereed}
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
     %\item[\dots] \ghedwards, G. Piccione, M. Gomez. Viewership patterns of a virtual geoscience outreach program. \inprep{Journal of Geoscience Education}.
-    \item A.~Abuawad, M.~Griffiths, \ghedwards, A.~Eftekhari, M.~El-Ebweini, H.~Al-Najar, A.~Butmeh, R.~Abu~Dayyeh, M.~El-Shewy, A.~Aker. Gaza: an urgent issue for environmental health scholars and practitioners \pub{American Journal of Public Health}{115}. \doi{10.2105/AJPH.2025.308140}. SSRN preprint:~\doi{10.2139/ssrn.5021472}.\TUpubpct{10}
+    \item A.~Abuawad, M.~Griffiths, \ghedwards, A.~Eftekhari, M.~El-Ebweini, H.~Al-Najar, A.~Butmeh, R.~Abu~Dayyeh, M.~El-Shewy, A.~Aker. The ongoing environmental destruction and degradation of Gaza: the resulting public health crisis. \pub{American Journal of Public Health}{115}. \doi{10.2105/AJPH.2025.308140}. SSRN preprint:~\doi{10.2139/ssrn.5021472}.\TUpubpct{10}
  
     \item \ghedwards, G.G.~Piccione, T.~Blackburn,  S.~Tulaczyk. 2025. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica. \pub{Chemical Geology}{671}. \doi{10.1016/j.chemgeo.2024.122463}.\TUpubpct{70}
         
