gsa 2025 student abstract and TU mentoring

--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -3,8 +3,18 @@
 \subline{Courses Taught}
 \tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
-	Spring 2025 & Earth Surface Processes, Earth's Environmental Systems\\
-	Fall 2024 & Global Climate Change
+	Spring 2025\ongoing & Earth Surface Processes, Earth's Environmental Systems\\
+	Fall 2024\ongoing & Global Climate Change
+\end{tabular}
+
+\subline{Mentored Undergraduate Researchers}
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{ll|ll}
+	2025\ongoing & Luke Moreton
+	\\
+	2025\ongoing & Rose Garrett
+	&
+	2025\ongoing & Awa Diouf
 \end{tabular}
 
 \lineitem{Dartmouth College}
@@ -25,11 +35,9 @@
 
 \subline[2022 -- 2023]{Research Group Leader}
 Acting leader of a research group (4 graduate, 2 undergraduate students) in the Department of Physics \& Astronomy while the Primary Investigator was on leave. Responsibilities included:
-\begin{itemize}
-\item Coordinate and facilitate group meetings.
-\item Provide non-specialist research guidance.
-\item Evaluate progress and assign grades.
-\item Organize/present mini-workshops on research tools and skills.
+\begin{itemize}[itemsep=0pt]
+\item Coordinate and facilitate group meetings, including mini-workshops on research tools and skills.
+\item Provide non-specialist research guidance and evaluate research progress.
 \end{itemize}
 
 \subline{Mentored Graduate Researchers}
