--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -2,7 +2,7 @@
 \lineitem{Trinity University}
 \subline{Courses Taught}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+\begin{tabular}{p{.15\linewidth} l} %p columns set fixed width and allow text wrapping
 	Spring 2025\ongoing & Earth Surface Processes, Earth's Environmental Systems\\
 	Fall 2024\ongoing & Global Climate Change
 \end{tabular}
@@ -20,7 +20,7 @@
 \lineitem{Dartmouth College}
 \subline{Courses Taught}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{p{.15\linewidth} >{\itshape}l}
+\begin{tabular}{p{.15\linewidth} l}
 	Spring 2024 & Exploration of the Solar System \\
 	Fall 2023 & Exploring the Universe \\
 	Fall 2023 & The Stretch \normalfont (Field camp ---glacial and climate history section)
@@ -28,7 +28,7 @@
 
 \subline{Guest Lectures}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+\begin{tabular}{p{.15\linewidth} l} %p columns set fixed width and allow text wrapping
 	Winter 2024 & Astrobiology\\
 	Spring 2022--24 & Igneous and Metamorphic Petrology
 \end{tabular}
@@ -61,8 +61,8 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \lineitem{University of California Santa Cruz}
 \subline{Graduate Teaching Assistant}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{p{.15\linewidth} >{\itshape}l}
-	Spring 2021 & Measuring Earth’s 4.5 Billion-Year History \normalfont(radiogenic and stable isotope geochemistry)\\
+\begin{tabular}{p{.15\linewidth} l}
+	Spring 2021 & Measuring Earth’s 4.5 Billion-Year History \normalfont(isotope geochemistry)\\
 	Fall 2020 & Evolution of Earth\\
 	Fall 2019 & Elements of Field Geology\\
 	Spring 2018 & Geochemistry of the Solar System\\
@@ -84,8 +84,7 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \subline{Laboratory Teaching Assistant}
 \tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{p{.15\linewidth} l} %p columns set fixed width and allow text wrapping
-Fall 2012, 2013 & \textit{Investigating Earth}\\
-Fall 2013 & \textit{Marine Biogeochemistry}
+Fall 2012, 2013 & Investigating Earth\\Fall 2013 & Marine Biogeochemistry
 \end{tabular}
 
 \lineitem[2015]{Bozeman \& Livingston Public Schools \qquad \normalfont{MT, U.S.A.}}
