--- a/sect/abstracts.tex
+++ b/sect/abstracts.tex
@@ -7,10 +7,12 @@ More comprehensive lists of abstracts are available on the \href{https://ui.adsa
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
   
   \item E.R.~Garrett*, L.P.~Moreton*, \ghedwards, G.~Piccione. 2025. [Poster]: Modern problems require ancient lakes: the chronology and chemistry of Glacial Lake Hitchcock. \textit{Geological Society of America: Connects 2025}, San Antonio, TX, U.S.A. Abstract No.~9078.
+  
+  \item \ghedwards, G.~Piccione, L.~Moreton*, E.R.~Garrett*, D.S.~Jones, C.~Danhof. 2025. [Oral]: A hydrologically and biologically complex proglacial lake system at the margins of the collapsing Laurentide Ice Sheet. \textit{Geological Society of America: Connects 2025}, San Antonio, TX, U.S.A. Abstract No.~\href{https://gsameetings.secure-platform.com/connects25/solicitations/103002/sessiongallery/schedule/items/95040/application/8850}{8850}.
 
   \item \ghedwards, C.B.~Keller, E.R.~Newton, R.~Rampalli*. 2025. [Poster]: Statistical cosmochemistry: gaining new perspectives from old (and new) data. \textit{56\textsuperscript{th} Lunar \& Planetary Science Conference}, Woodlands, TX, U.S.A. Abstract No.~\href{https://www.hou.usra.edu/meetings/lpsc2025/pdf/2505.pdf}{2505}.
 
-  \item \ghedwards, C.B.~Keller, E.R.~Newton, C.~Stewart*. 2023. [Talk]: Disk-driven migration of Jupiter: support from meteorite thermochronology. \textit{Goldschmidt Conference}, Lyon, FR. \doi{10.7185/gold2023.18450}
+  \item \ghedwards, C.B.~Keller, E.R.~Newton, C.~Stewart*. 2023. [Talk]: Disk-driven migration of Jupiter: support from meteorite thermochronology. \textit{Goldschmidt Conf.}, Lyon, FR. \doi{10.7185/gold2023.18450}
 
   \item \ghedwards, G.~Piccione, M.~Gomez. 2022. [Poster]: Comparing in-person and virtual modes of a 4-year museum-based geoscience outreach program. \textit{Earth Educators' Rendezvous 2022}, Minneapolis, MN, U.S.A.
 
@@ -20,7 +22,6 @@ More comprehensive lists of abstracts are available on the \href{https://ui.adsa
 
   \item  \ghedwards, T.~Blackburn, S.~Tulaczyk, G.G.~Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Conference}, Barcelona, ES.
 
-  \item \ghedwards, T.~Blackburn, K.V.~Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
 
   \item  \ghedwards, T.~Blackburn, C.M.O’D.~Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \textit{80\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Santa Fe, NM, U.S.A.
 
@@ -37,3 +38,5 @@ More comprehensive lists of abstracts are available on the \href{https://ui.adsa
 %\item \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
 
 %  \item  \ghedwards, T.~Blackburn, G.G.~Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
+
+%   \item \ghedwards, T.~Blackburn, K.V.~Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
