--- a/sect/appointments.tex
+++ b/sect/appointments.tex
@@ -2,7 +2,7 @@
 
 \lineitem[2024\ongoing]{Trinity University}
 \subline{Assistant Professor}
-Earth \& Environmental Geosciences, Museum Studies
+Earth \& Environmental Geosciences, Museum Studies, Environmental Studies
 
 \lineitem[2021 -- 2024]{Dartmouth College}
 
