--- a/sect/dept-service.tex
+++ b/sect/dept-service.tex
@@ -5,6 +5,10 @@
 \subline{Department of Earth \& Environmental Geosciences}
 Committee member: Tenure-track assistant professor of environmental geoscience search \hfill 2024
 
+\subline{Environmental Studies Program}
+Guest lecturer in ENVI~1301 (Introduction to Environmental Studies)
+
+
 \lineitem{Dartmouth College}
 \subline{Department of Earth Sciences}
 Postdoc Representative for Faculty Search Committee (2 searches) \hfill 2023, 2024
