--- a/sect/inst-service.tex
+++ b/sect/inst-service.tex
@@ -1,5 +1,7 @@
 \section{Institutional Service}
 
 \lineitem{Trinity University}
+\subline[\hfill 2025\ongoing]{Sustainability Committee}
+Appointed member of TU's standing Sustainability Committee.
 \subline[\hfill 2024\ongoing]{Early Career Research Commission}
 Developing/implementing career-support and community-building resources for early-career scholars.
