--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -2,9 +2,19 @@
 \lineitem{Trinity University}
 \subline{Courses Taught}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{p{.15\linewidth} l} %p columns set fixed width and allow text wrapping
-	Spring 2025\ongoing & Earth Surface Processes, Earth's Environmental Systems\\
-	Fall 2024\ongoing & Global Climate Change
+\begin{tabular}{l l} %p columns set fixed width and allow text wrapping
+	Fall, 2024\ongoing & GEOS 3410: Global Climate Change\\
+	\midrule
+	Spring, 2025\ongoing & GEOS 2402: Earth Surface Processes\\
+	Spring, 2025\ongoing & GEOS 1409: Earth's Environmental Systems\\
+\end{tabular}
+
+\subline{Guest Lectures}
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{l l} %p columns set fixed width and allow text wrapping
+	Fall 2025 & ENVI 1301: Introduction to Environmental Studies \\
+	Fall 2025 & GNED 3151/3252: Ethics, Racism \& Gender Inequality in STEM I\\
+	Fall 2025 & INTL 1301: Introduction to International Studies
 \end{tabular}
 
 \subline{Mentored Undergraduate Researchers}
@@ -20,7 +30,7 @@
 \lineitem{Dartmouth College}
 \subline{Courses Taught}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{p{.15\linewidth} l}
+\begin{tabular}{l l}
 	Spring 2024 & Exploration of the Solar System \\
 	Fall 2023 & Exploring the Universe \\
 	Fall 2023 & The Stretch \normalfont (Field camp ---glacial and climate history section)
@@ -61,7 +71,7 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \lineitem{University of California Santa Cruz}
 \subline{Graduate Teaching Assistant}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{p{.15\linewidth} l}
+\begin{tabular}{ll}
 	Spring 2021 & Measuring Earth’s 4.5 Billion-Year History \normalfont(isotope geochemistry)\\
 	Fall 2020 & Evolution of Earth\\
 	Fall 2019 & Elements of Field Geology\\
@@ -83,7 +93,7 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \lineitem{Bowdoin College \brunswick}
 \subline{Laboratory Teaching Assistant}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{p{.15\linewidth} l} %p columns set fixed width and allow text wrapping
+\begin{tabular}{l l} %p columns set fixed width and allow text wrapping
 Fall 2012, 2013 & Investigating Earth\\Fall 2013 & Marine Biogeochemistry
 \end{tabular}
 
