--- a/sect/abstracts.tex
+++ b/sect/abstracts.tex
@@ -8,7 +8,7 @@ More comprehensive lists of abstracts are available on the \href{https://ui.adsa
   
   \item E.R.~Garrett*, L.P.~Moreton*, \ghedwards, G.~Piccione. 2025. [Poster]: Modern problems require ancient lakes: the chronology and chemistry of Glacial Lake Hitchcock. \textit{Geological Society of America: Connects 2025}, San Antonio, TX, U.S.A. Abstract No.~9078.
   
-  \item \ghedwards, G.~Piccione, L.~Moreton*, E.R.~Garrett*, D.S.~Jones, C.~Danhof. 2025. [Oral]: A hydrologically and biologically complex proglacial lake system at the margins of the collapsing Laurentide Ice Sheet. \textit{Geological Society of America: Connects 2025}, San Antonio, TX, U.S.A. Abstract No.~\href{https://gsameetings.secure-platform.com/connects25/solicitations/103002/sessiongallery/schedule/items/95040/application/8850}{8850}.
+  \item \ghedwards, G.~Piccione, L.P.~Moreton*, E.R.~Garrett*, D.S.~Jones, C.~Danhof. 2025. [Oral]: A hydrologically and biologically complex proglacial lake system at the margins of the collapsing Laurentide Ice Sheet. \textit{Geological Society of America: Connects 2025}, San Antonio, TX, U.S.A. Abstract No.~\href{https://gsameetings.secure-platform.com/connects25/solicitations/103002/sessiongallery/schedule/items/95040/application/8850}{8850}.
 
   \item \ghedwards, C.B.~Keller, E.R.~Newton, R.~Rampalli*. 2025. [Poster]: Statistical cosmochemistry: gaining new perspectives from old (and new) data. \textit{56\textsuperscript{th} Lunar \& Planetary Science Conference}, Woodlands, TX, U.S.A. Abstract No.~\href{https://www.hou.usra.edu/meetings/lpsc2025/pdf/2505.pdf}{2505}.
 
