--- a/sect/academic-service.tex
+++ b/sect/academic-service.tex
@@ -19,6 +19,12 @@
 
 \lineitem{Academic Meetings}
 
+\subline{GSA Connects}
+\tagpdfsetup{table/tagging=presentation}
+\begin{tabular}{ll} 
+	2025 & Session chair: \small Asteroid observations, return missions, and meteoritics: interweaving perspectives and data
+\end{tabular}
+
 \subline{Lunar \& Planetary Science Conference}
 \tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{ll} 
@@ -40,7 +46,7 @@
 \subline{AGU Fall Meeting}
 \tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{ll} 
-	2017 & 	Co-Chair/Co-Convener: Applications of Thermochronology to Understand Crustal Systems
+	2017 & 	Session co-chair: \small Applications of Thermochronology to Understand Crustal Systems
 \end{tabular}
 
 \lineitem{Society Affiliations}
