--- a/sect/awards.tex
+++ b/sect/awards.tex
@@ -1,9 +1,9 @@
 \section{AWARDS \& HONORS}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{@{}p{.1\linewidth} @{}p{.9\linewidth}} 
+\begin{tabular}{ll} 
 	2024 & A.~Lincoln~Washburn Award for Outstanding Mentoring, Dartmouth Earth Sciences\\
 	2020 & UCSC Earth \& Planetary Sciences Outstanding TA Award (Honorable Mention) \\
-	2019 & Aaron and Elizabeth Waters Award ---  \textit{Issued annually for the most outstanding proposal for PhD research in the UCSC Department of Earth \& Planetary Sciences} \\
+	2019 & Aaron and Elizabeth Waters Award \\%---  \textit{Issued annually for the most outstanding proposal for PhD research in the UCSC Department of Earth \& Planetary Sciences} \\
 	2014 & National Association of Geoscience Teachers Outstanding TA Award \\
 	2011--13 & Sarah and James Bowdoin Scholar (Dean's List) \\
 \end{tabular}
