--- a/sect/education.tex
+++ b/sect/education.tex
@@ -8,4 +8,4 @@ Applications of the uranium decay systems in deep time and the Quaternary: chron
 
 \lineitem[2014]{Bowdoin College \brunswick}
 \subline{Bachelor of Arts, Summa cum Laude}
-Earth and Oceanographic Science with Honors, minor in Classics ($\Phi$BK Society)
+Earth and Oceanographic Science with Honors, minor in Classics, $\Phi$BK Society
