--- a/sect/expertise.tex
+++ b/sect/expertise.tex
@@ -18,7 +18,7 @@
 
 \lineitem{Laboratory}
 \subline[\hfill 2024\ongoing]{Geochemistry \& Radioisotope Analysis \& Computation Laboartory (\href{https://grackletu.github.io}{GRACkLe}), Trinity Univ.}
-Primary Investigator --- wet chemistry and computational laboratories currently under development
+Primary Investigator --- wet chemistry and computational facilities currently in development
 \subline[\hfill 2016 -- 2021]{W.M. Keck Isotope Facility, UC Santa Cruz}
 Under the advisorship of lab director Prof.~Terry Blackburn, I was partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
 	\begin{itemize} 
