--- a/sect/funding.tex
+++ b/sect/funding.tex
@@ -2,9 +2,8 @@
 \tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{@{}p{.1\linewidth} p{0.1\linewidth} p{0.35\linewidth} @{}p{.4\linewidth}} 
     %\bfseries Timeframe & \bfseries Amount & \bfseries Agency \\
+    %\midrule \textbf{Inactive}\\
     2025 & \$9\,000 & Trinity University & Summer Research Stipend\\
-    \midrule
-    \textbf{Inactive}\\
     2021--24 & \$310\,000 & National Science Foundation & \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2102591}{Award~\#2102591}\\
     2020--21 & \$10\,000 & ARCS Foundation & Scholar Award \\
     2016--17 &  & Univ.~of California Santa Cruz  & Regent's (Graduate) Fellowship \\
