--- a/sect/inst-service.tex
+++ b/sect/inst-service.tex
@@ -3,5 +3,5 @@
 \lineitem{Trinity University}
 \subline[\hfill 2025\ongoing]{Sustainability Committee}
 Appointed member of TU's standing Sustainability Committee.
-\subline[\hfill 2024\ongoing]{Early Career Research Commission}
+\subline[\hfill 2024\ongoing]{Emerging Scholars Commission}
 Developing/implementing career-support and community-building resources for early-career scholars.
