--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -2,9 +2,8 @@
 \lineitem{Trinity University}
 \subline{Courses Taught}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{l l} %p columns set fixed width and allow text wrapping
+\begin{tabular}{r l} %p columns set fixed width and allow text wrapping
 	Fall, 2024\ongoing & GEOS 3410: Global Climate Change\\
-	\midrule
 	Spring, 2025\ongoing & GEOS 2402: Earth Surface Processes\\
 	Spring, 2025\ongoing & GEOS 1409: Earth's Environmental Systems\\
 \end{tabular}
@@ -45,7 +44,7 @@
 
 \subline[2022 -- 2023]{Research Group Leader}
 Acting leader of a research group (4 graduate, 2 undergraduate students) in the Department of Physics \& Astronomy while the Primary Investigator was on leave. Responsibilities included:
-\begin{itemize}[itemsep=0pt]
+\begin{itemize}
 \item Coordinate and facilitate group meetings, including mini-workshops on research tools and skills.
 \item Provide non-specialist research guidance and evaluate research progress.
 \end{itemize}
