make pdf section headings not all caps

--- a/sect/awards.tex
+++ b/sect/awards.tex
@@ -1,4 +1,4 @@
-\section{AWARDS \& HONORS}
+\section{Awards \& honors}
 \tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{ll} 
 	2024 & A.~Lincoln~Washburn Award for Outstanding Mentoring, Dartmouth Earth Sciences\\
