--- a/sect/education.tex
+++ b/sect/education.tex
@@ -1,4 +1,4 @@
-\section{EDUCATION}
+\section{Education}
 
 \lineitem[2021]{\textbf{University of California Santa Cruz}}
 \subline{PhD in Earth Sciences}
