--- a/sect/expertise.tex
+++ b/sect/expertise.tex
@@ -1,4 +1,4 @@
-\section{Laboratory \& Research Expertise}
+\section{Laboratory \& research expertise}
 
 \lineitem{Instrumentation}
 \tagpdfsetup{table/tagging=presentation}
