--- a/sect/funding.tex
+++ b/sect/funding.tex
@@ -1,4 +1,4 @@
-\section{FUNDING}
+\section{Funding}
 \tagpdfsetup{table/tagging=presentation}
 \begin{tabular}{@{}p{.1\linewidth} p{0.1\linewidth} p{0.35\linewidth} @{}p{.4\linewidth}} 
     %\bfseries Timeframe & \bfseries Amount & \bfseries Agency \\
