--- a/sect/inst-service.tex
+++ b/sect/inst-service.tex
@@ -1,4 +1,4 @@
-\section{Institutional Service}
+\section{Institutional service}
 
 \lineitem{Trinity University}
 \subline[\hfill 2025\ongoing]{Sustainability Committee}
