--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -1,4 +1,4 @@
-\section{PUBLIC SERVICE \& OUTREACH}
+\section{Public service \& outreach}
 
 \lineitem[2022 -- 2024]{Montshire Museum of Science}
 \subline{Guest Scientist}
