--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -1,4 +1,4 @@
-\section{PUBLICATIONS}
+\section{Publications}
 \hfill* mentored student author
 \newcommand{\inprep}[1]{\textit{#1} [in prep.]}
 \newcommand{\submitted}[1]{\textit{#1} [submitted]}
