--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -2,7 +2,7 @@
 \newcommand{\invitedtalk}[3]{\textbf{#1} $|$ {#2} \\ Title:~\textit{#3}}
 \newcommand{\outreachtalk}[3]{\textbf{#1} $|$ {#2} \\ \quad \textit{#3}}
 %%%%%%%%
-\section{INVITED ACADEMIC TALKS}
+\section{Invited academic talks}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex,]
   \item \invitedtalk{The University of Akron}{Invited Research Talk, 6 February 2024}{Reconstructing and deconstructing ice sheets from the ground up}
