--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,4 +1,4 @@
-\section{TEACHING \&\ MENTORING}
+\section{Teaching \&\ mentoring}
 \lineitem{Trinity University}
 \subline{Courses Taught}
 \tagpdfsetup{table/tagging=presentation}
