--- a/sect/abstracts.tex
+++ b/sect/abstracts.tex
@@ -1,4 +1,4 @@
-\section{SELECTED CONFERENCE ABSTRACTS}
+\section{Selected conference abstracts}
 
 More comprehensive lists of abstracts are available on the \href{https://ui.adsabs.harvard.edu/search/q=author%3A%22Edwards%2C%20Graham%20Harper%22}{Astrophysical Data System} and \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}.
 
