--- a/sect/academic-service.tex
+++ b/sect/academic-service.tex
@@ -1,4 +1,4 @@
-\section{DISCIPLINARY SERVICE}
+\section{Disciplinary service}
 
 \lineitem[2023\ongoing]{Interdisciplinary Earth Data Alliance 2 (IEDA\textsuperscript{2})}
 \subline{Community Advisory Board, \normalfont Chair}
